# flightmare

flightlib/: CMakeLists.txt  package.xml
flightlib/cmake/: catkin.cmake
flightrender/: CMakeLists.txt  package.xml
flightros/: CMakeLists.txt  package.xml
flightros/include/flightros/: flight_pilot.hpp
flightros/launch/: bare_gazebo.launch
flightros/src/: flight_pilot.cpp
